--- a/.github/workflows/check_prisma.yaml
+++ b/.github/workflows/check_prisma.yaml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - 'prisma/**/*.prisma'
+      - 'src/**/*.prisma'
       - '.github/workflows/check_prisma.yaml'
 
 permissions:
