--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,3 +6,11 @@ assets = { directory = "./build/client" }
 
 [observability.logs]
 enabled = true
+head_sampling_rate = 1
+persist = true
+invocation_logs = true
+
+[observability.traces]
+enabled = true
+head_sampling_rate = 1
+persist = true
