--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prestart": "supabase start",
     "start": "react-router dev",
     "poststart": "supabase stop",
+    "dev": "react-router dev",
     "build": "react-router build",
     "test:frontend": "vitest run -c src/test/vitest-config/config.frontend.ts",
     "test:domain": "vitest run -c src/test/vitest-config/config.domain.ts",
