--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -121,26 +121,15 @@ jobs:
     needs: setup
     runs-on: ${{ needs.setup.outputs.test_runner }}
     if: ${{ needs.setup.outputs.run_api_test == 'true' }}
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: postgres
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
         uses: ./.github/actions/setup_node
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
+
+      - name: Supabaseのセットアップ
+        uses: ./.github/actions/setup_supabase
 
       - name: DB Migration
         env:
