--- a/.github/actions/setup_supabase/action.yaml
+++ b/.github/actions/setup_supabase/action.yaml
@@ -4,8 +4,10 @@ description: 'SupabaseをセットアップするComposite Action'
 runs:
   using: 'composite'
   steps:
-    - name: Supabaseのセットアップ
+    - name: Supabase CLIのセットアップ
       uses: supabase/setup-cli@v1
+    - name: Supabaseの起動
+      shell: bash
       # INFO: DBと認証のみ起動
       run: supabase start --exclude realtime,storage-api,imgproxy,postgrest,postgres-meta,studio,edge-runtime,logflare,vector,supavisor,mailpit
 
