--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -25,7 +25,6 @@ concurrency:
 # 共通の設定を定義
 env:
   NODE_VERSION_FILE: .node-version
-  DATABASE_URL: postgresql://postgres:postgres@localhost:54322/postgres # Supabaseのデフォルト認証情報
 
 jobs:
   test:
@@ -36,11 +35,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - id: setup-supabase
+        name: Supabaseのセットアップ
+        uses: ./.github/actions/setup_supabase
+
+      - name: 環境変数の設定
+        run: |
+          echo "SUPABASE_ANON_KEY=${{ steps.setup-supabase.outputs.anon_key }}" >> $GITHUB_ENV
+          echo "DATABASE_URL=${{ steps.setup-supabase.outputs.db_url }}" >> $GITHUB_ENV
+
       - name: E2E環境のセットアップ
         uses: ./.github/actions/setup_e2e
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
-          database-url: ${{ env.DATABASE_URL }}
+          database-url: ${{ steps.setup-supabase.outputs.db_url }}
 
       - name: E2Eテストの実行
         run: npm run e2e -- --pass-with-no-tests
@@ -62,11 +70,20 @@ jobs:
         with:
           fetch-depth: 0
 
+      - id: setup-supabase
+        name: Supabaseのセットアップ
+        uses: ./.github/actions/setup_supabase
+
+      - name: 環境変数の設定
+        run: |
+          echo "SUPABASE_ANON_KEY=${{ steps.setup-supabase.outputs.anon_key }}" >> $GITHUB_ENV
+          echo "DATABASE_URL=${{ steps.setup-supabase.outputs.db_url }}" >> $GITHUB_ENV
+
       - name: E2E環境のセットアップ
         uses: ./.github/actions/setup_e2e
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
-          database-url: ${{ env.DATABASE_URL }}
+          database-url: ${{ steps.setup-supabase.outputs.db_url }}
 
       - name: E2Eテストの差分実行
         shell: bash
