--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,7 +31,6 @@ concurrency:
 # 共通の設定を定義
 env:
   NODE_VERSION_FILE: .node-version
-  DATABASE_URL: postgresql://postgres:password@localhost:54322/postgres # Supabase側で変更できず、Supabaseの設定と整合性を保つため
 
 jobs:
   setup:
@@ -128,12 +127,17 @@ jobs:
         with:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
 
-      - name: Supabaseのセットアップ
+      - id: setup-supabase
+        name: Supabaseのセットアップ
         uses: ./.github/actions/setup_supabase
 
+      - name: 環境変数の設定
+        run: |
+          echo "SUPABASE_ANON_KEY=${{ steps.setup-supabase.outputs.anon_key }}" >> $GITHUB_ENV
+          echo "DATABASE_URL=${{ steps.setup-supabase.outputs.db_url }}" >> $GITHUB_ENV
+          echo "DIRECT_URL=${{ steps.setup-supabase.outputs.db_url }}" >> $GITHUB_ENV
+
       - name: DB Migration
-        env:
-          DIRECT_URL: ${{ env.DATABASE_URL }}
         run: npm run db:migrate
 
       - name: APIのテスト
