--- a/.github/actions/setup_e2e/action.yaml
+++ b/.github/actions/setup_e2e/action.yaml
@@ -5,9 +5,6 @@ inputs:
   node-version-file:
     description: Node.jsバージョンファイルのパス
     required: true
-  database-url:
-    description: データベース接続URL
-    required: true
 
 runs:
   using: composite
@@ -32,5 +29,5 @@ runs:
     - name: DB Migration
       shell: bash
       env:
-        DIRECT_URL: ${{ inputs.database-url }}
+        DIRECT_URL: ${{ env.DATABASE_URL }}
       run: npm run db:migrate
