--- a/.github/actions/setup_supabase/action.yaml
+++ b/.github/actions/setup_supabase/action.yaml
@@ -1,14 +1,6 @@
 name: Setup Supabase Composite Action
 description: 'SupabaseをセットアップするComposite Action'
 
-outputs:
-  db_url:
-    description: 'Supabaseのデータベース接続URL'
-    value: ${{ steps.get-keys.outputs.db-url }}
-  anon_key:
-    description: 'Supabaseのanon key'
-    value: ${{ steps.get-keys.outputs.anon-key }}
-
 runs:
   using: 'composite'
   steps:
@@ -20,10 +12,12 @@ runs:
       # INFO: DBと認証のみ起動
       run: supabase start --exclude realtime,storage-api,imgproxy,postgrest,postgres-meta,studio,edge-runtime,logflare,vector,supavisor,mailpit
 
-    - name: Supabaseのキー取得
+    - name: Supabaseのキーを環境変数に設定
       id: get-keys
       shell: bash
       run: |
         SUPABASE_JSON=$(supabase status --output json)
-        echo "db-url=$(echo $SUPABASE_JSON | jq -r '.DB_URL')" >> $GITHUB_OUTPUT
-        echo "anon-key=$(echo $SUPABASE_JSON | jq -r '.ANON_KEY')" >> $GITHUB_OUTPUT
+        echo "SUPABASE_ANON_KEY=$(echo $SUPABASE_JSON | jq -r '.ANON_KEY')" >> $GITHUB_ENV
+        echo "DATABASE_URL=$(echo $SUPABASE_JSON | jq -r '.DB_URL')" >> $GITHUB_ENV
+        echo "DB_URL=$(echo $SUPABASE_JSON | jq -r '.DB_URL')" >> $GITHUB_ENV
+        echo "DIRECT_URL=$(echo $SUPABASE_JSON | jq -r '.DB_URL')" >> $GITHUB_ENV
