--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "e2e": "playwright test",
     "e2e:report": "playwright show-report",
     "e2e:gen": "playwright codegen",
-    "tsc": "tsc --noEmit",
+    "tsc": "tsgo --noEmit",
     "lint": "biome ci . && npm run tsc",
     "check": "biome check .",
     "check:fix": "biome check --write . --unsafe",
@@ -95,6 +95,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^10.0.0",
+    "@typescript/native-preview": "^7.0.0-dev.20251209.1",
     "@vitest/browser": "3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "dotenv": "^17.2.1",
