refactor: TypeScript型チェックのスクリプト名をtscからtypecheckに変更

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -38,4 +38,4 @@ jobs:
           node-version-file: ${{ env.NODE_VERSION_FILE }}
 
       - name: TypeScript型チェック
-        run: npm run tsc
+        run: npm run typecheck
