--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "e2e": "playwright test",
     "e2e:report": "playwright show-report",
     "e2e:gen": "playwright codegen",
-    "tsc": "tsgo --noEmit",
+    "typecheck": "tsgo --noEmit",
     "lint": "biome ci . && npm run tsc",
     "check": "biome check .",
     "check:fix": "biome check --write . --unsafe",
