--- a/mise.toml
+++ b/mise.toml
@@ -2,8 +2,8 @@
 node = "22.13.0"
 
 [env]
-DATABASE_URL = "postgresql://postgres:password@localhost:5432/postgres?connection_limit=20"
-DIRECT_URL = "postgresql://postgres:password@localhost:5432/postgres?connection_limit=20"
+DATABASE_URL = "postgresql://postgres:postgres@127.0.0.1:54322/postgres"
+DIRECT_URL = "postgresql://postgres:postgres@127.0.0.1:54322/postgres"
 FEATURE_USER_ENABLED = "true"
 ADMIN_EMAIL = ""
 ADMIN_PASSWORD = ""
