refactor: ジョブ名を biome から code-quality に変更

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -15,7 +15,7 @@ env:
   NODE_VERSION_FILE: .node-version
 
 jobs:
-  biome:
+  code-quality:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
