--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:frontend": "vitest run -c src/test/vitest/config/frontend.ts",
     "test:domain": "vitest run -c src/test/vitest/config/domain.ts",
     "test:api": "vitest run -c src/test/vitest/config/api.ts",
+    "test:common": "vitest run -c src/test/vitest/config/common.ts",
     "e2e": "playwright test --config=src/test/e2e/playwright.config.ts",
     "e2e:report": "playwright show-report src/test/e2e/playwright-report",
     "e2e:gen": "playwright codegen --config=src/test/e2e/playwright.config.ts",
