--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ coverage/
 /src/test/e2e/playwright-report/
 /src/test/e2e/blob-report/
 /src/test/e2e/playwright/.cache/
+/test-results/
 
 *storybook.log
 storybook-static
