--- a/.github/actions/test_cov/action.yaml
+++ b/.github/actions/test_cov/action.yaml
@@ -3,7 +3,7 @@ description: 'テストを実行し、テストカバレッジの可視化まで
 
 inputs:
   target:
-    description: 'テスト対象 (frontend, api, domain)'
+    description: 'テスト対象 (client, api, domain)'
     required: true
 
 runs:
