--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "supabase:start": "supabase start --exclude realtime,storage-api,imgproxy,postgrest,postgres-meta,studio,edge-runtime,logflare,vector,supavisor,mailpit",
     "test:client": "vitest run -c src/test/vitest/client/config.ts",
     "test:domain": "vitest run -c src/test/vitest/domain/config.ts",
-    "test:api": "vitest run -c src/test/vitest/api/config.ts",
+    "test:server": "vitest run -c src/test/vitest/server/config.ts",
     "test:common": "vitest run -c src/test/vitest/common/config.ts",
     "e2e": "playwright test --config=src/test/e2e/playwright.config.ts",
     "e2e:report": "playwright show-report src/test/e2e/playwright-report",
