--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,7 +39,7 @@ jobs:
       test_runner: ubuntu-latest
       run_client_test: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' || steps.check-test-config.outputs.diff-count != 0 || steps.check-client.outputs.diff-count != 0 }}
       run_domain_test: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' || steps.check-test-config.outputs.diff-count != 0 || steps.check-domain.outputs.diff-count != 0 }}
-      run_api_test: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' || steps.check-test-config.outputs.diff-count != 0 || steps.check-api.outputs.diff-count != 0 }}
+      run_server_test: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' || steps.check-test-config.outputs.diff-count != 0 || steps.check-server.outputs.diff-count != 0 }}
       run_common_test: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' || steps.check-test-config.outputs.diff-count != 0 || steps.check-common.outputs.diff-count != 0 }}
     steps:
       - uses: actions/checkout@v4
@@ -63,11 +63,11 @@ jobs:
         with:
           subdir: 'src/domain'
 
-      - name: APIの差分チェック
-        id: check-api
+      - name: サーバーの差分チェック
+        id: check-server
         uses: ./.github/actions/diff
         with:
-          subdir: 'src/application/api'
+          subdir: 'src/application/server'
 
       - name: 共通モジュールの差分チェック
         id: check-common
@@ -83,7 +83,7 @@ jobs:
             echo "テスト設定差分: ${{ steps.check-test-config.outputs.diff-count }} ファイル"
             echo "クライアント差分: ${{ steps.check-client.outputs.diff-count }} ファイル"
             echo "ドメイン差分: ${{ steps.check-domain.outputs.diff-count }} ファイル"
-            echo "API差分: ${{ steps.check-api.outputs.diff-count }} ファイル"
+            echo "サーバー差分: ${{ steps.check-server.outputs.diff-count }} ファイル"
             if [[ "${{ steps.check-test-config.outputs.diff-count }}" != "0" ]]; then
               echo "テスト設定ファイルに変更があるため、全テストを実行"
             fi
@@ -123,10 +123,10 @@ jobs:
         with:
           target: domain
 
-  api:
+  server:
     needs: setup
     runs-on: ${{ needs.setup.outputs.test_runner }}
-    if: ${{ needs.setup.outputs.run_api_test == 'true' }}
+    if: ${{ needs.setup.outputs.run_server_test == 'true' }}
     steps:
       - uses: actions/checkout@v4
       - name: Node.jsの構築
@@ -142,10 +142,10 @@ jobs:
           DIRECT_URL: ${{ env.DATABASE_URL }}
         run: npm run db:migrate
 
-      - name: APIのテスト
+      - name: サーバーのテスト
         uses: ./.github/actions/test_cov
         with:
-          target: api
+          target: server
 
   common:
     needs: setup
