--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -28,7 +28,7 @@ jobs:
         run: biome ci .
 
   # 本来であれば、概念的にコンパイルはLint/Formatと同列ではないが、実行時間短縮のために並列実行にしている
-  ts-compile-check:
+  ts-compile:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
