--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,7 @@
 name = "trend-diary"
 compatibility_date = "2025-04-01"
 compatibility_flags = [ "nodejs_compat" ]
-main = "./src/worker.ts"
+main = "./src/web/worker.ts"
 assets = { directory = "./build/client" }
 
 [observability.logs]
