--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -14,6 +14,11 @@ concurrency:
 env:
   NODE_VERSION_FILE: .node-version
 
+defaults:
+  run:
+    shell: bash
+    working-directory: ./application
+
 jobs:
   code-quality:
     runs-on: ubuntu-latest
