--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -12,7 +12,7 @@ concurrency:
 
 # 共通の設定を定義
 env:
-  NODE_VERSION_FILE: .node-version
+  NODE_VERSION_FILE: ./application/.node-version
 
 defaults:
   run:
