chore: ライブラリインストールの作業ディレクトリを設定

--- a/.github/actions/setup_node/action.yaml
+++ b/.github/actions/setup_node/action.yaml
@@ -17,4 +17,5 @@ runs:
 
     - name: ライブラリのインストール
       shell: bash
+      working-directory: ${{ github.workspace }}/application
       run: npm ci
