--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -25,6 +25,7 @@ defaults:
 
 env:
   DENO_VERSION: 2.3.1
+  WORKING_DIRECTORY: ./supabase/functions
 
 jobs:
   lint:
@@ -47,7 +48,7 @@ jobs:
         with:
           deno-version: ${{ env.DENO_VERSION }}
       - name: Format
-        run: deno fmt --check -c supabase/style_config.json
+        run: deno fmt --check -c ${{ env.WORKING_DIRECTORY }}/style_config.json
 
   type-check:
     runs-on: ubuntu-latest
@@ -61,8 +62,8 @@ jobs:
         # deno checkのファイル指定で`**`を使うと、サブディレクトリのファイルがチェックされなくなるため、全部のディレクトリを手動でそれぞれ指定する
         # deno checkはdeno.jsonのある環境でしか実行できないため、各関数のdeno.jsonを指定する
         run: |
-          for function_name in $(ls supabase/functions); do
-            find supabase -name "*.ts" | xargs deno check -c supabase/functions/$function_name/deno.json
+          for function_name in $(ls ${{ env.WORKING_DIRECTORY }}); do
+            find supabase -name "*.ts" | xargs deno check -c ${{ env.WORKING_DIRECTORY }}/$function_name/deno.json
           done
 
   test:
@@ -98,10 +99,10 @@ jobs:
 
         # deno testはdeno.jsonのある環境でしか実行できないため、各関数のディレクトリで実行する
         run: |
-          for function_name in $(ls supabase/functions); do
+          for function_name in $(ls ${{ env.WORKING_DIRECTORY }}); do
             # サブシェルで実行することで、cdの影響を局所化
             (
-              cd supabase/functions/$function_name
+              cd ${{ env.WORKING_DIRECTORY }}/$function_name
 
               # deno testの実行
               deno test --allow-read --allow-env --allow-net --allow-write --allow-run -c deno.json --coverage=coverage
@@ -111,9 +112,9 @@ jobs:
         env:
           NO_COLOR: true
         run: |
-          for function_name in $(ls supabase/functions); do
+          for function_name in $(ls ${{ env.WORKING_DIRECTORY }}); do
             (
-              cd supabase/functions/$function_name
+              cd ${{ env.WORKING_DIRECTORY }}/$function_name
 
               # LCOV形式でカバレッジを出力
               deno coverage ./coverage --lcov --output=coverage/lcov.info
