--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -1,5 +1,10 @@
 name: Cloudflare Preview Deploy
 
+permissions:
+  contents: read
+  pull-requests: write
+  deployments: write
+
 on:
   pull_request:
     types: [opened, synchronize, reopened]
@@ -13,15 +18,15 @@ on:
       - 'vite.config.ts'
       - '.github/workflows/preview-deploy.yml'
 
+defaults:
+  run:
+    shell: bash
+    working-directory: ./application
+
 jobs:
   deploy-preview:
     if: github.actor != 'dependabot[bot]'
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
-      deployments: write
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
