--- a/.github/workflows/functions_ci.yaml
+++ b/.github/workflows/functions_ci.yaml
@@ -25,7 +25,7 @@ defaults:
 
 env:
   DENO_VERSION: 2.3.1
-  WORKING_DIRECTORY: ./supabase/functions
+  WORKING_DIRECTORY: ./application/supabase/functions
 
 jobs:
   lint:
