chore: E2Eワークフローの作業ディレクトリを修正し、NODE_VERSION_FILEのパスを更新

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -22,9 +22,14 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+defaults:
+  run:
+    shell: bash
+    working-directory: ./application
+
 # 共通の設定を定義
 env:
-  NODE_VERSION_FILE: .node-version
+  NODE_VERSION_FILE: ./application/.node-version
 
 jobs:
   test:
