--- a/application/package.json
+++ b/application/package.json
@@ -61,8 +61,8 @@
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
     "pino": "^9.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-router": "^7.12.0",
     "rss-parser": "^3.13.0",
     "sonner": "^2.0.3",
@@ -71,6 +71,7 @@
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.0.5",
     "vaul": "^1.1.2",
+    "vite-plugin-babel": "^1.4.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -92,12 +93,13 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.15.30",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "@types/uuid": "^10.0.0",
     "@typescript/native-preview": "^7.0.0-dev.20251209.1",
     "@vitest/browser": "3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "babel-plugin-react-compiler": "^1.0.0",
     "dotenv": "^17.2.1",
     "jsdom": "^26.1.0",
     "playwright": "^1.56.1",
