--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -32,6 +32,7 @@ defaults:
 jobs:
   web:
     runs-on: ubuntu-latest
+    environment: production
     if: ${{ github.event.workflow_run && github.event.workflow_run.conclusion == 'success' || github.event.inputs.deploy_type == 'web' }}
     steps:
       - uses: actions/checkout@v4
@@ -70,6 +71,7 @@ jobs:
 
   database:
     runs-on: ubuntu-latest
+    environment: production
     if: ${{ github.event.workflow_run && github.event.workflow_run.conclusion == 'success' || github.event.inputs.deploy_type == 'database' }}
     env:
       DATABASE_URL: ${{ secrets.DIRECT_DATABASE_URL }}
